#   Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998,
#   1999, 2000, 2001, 2002, 2003 Free Software Foundation, Inc.
#
# This file is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

AC_INIT(configure.in)
AC_PREREQ(2.13)
AC_CANONICAL_SYSTEM

# When compiling with VC++ under Cygwin, we need to
# check for a grep executable that does not treat
# CRLF the same as LF. This problem causes a number
# of really mysterious configure problems.

case "${host}" in
*windows32*)
        result=`echo file.cA | tr A '\r' | grep -v '^file.c$'`
        if test "$result" = "file.c" ; then
            AC_MSG_ERROR([Can't build with Cygwin grep, see INSTALL.TXT])
        fi
        ;;
esac

TOP_SUBDIRS="tcl tk itcl tix libgui db snavigator"
AC_SUBST(TOP_SUBDIRS)
AC_CONFIG_SUBDIRS($TOP_SUBDIRS)

AC_OUTPUT([Makefile])
