dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run during [incr Tcl]
dnl     installation to configure the system for the local environment.
dnl     RCS: $Id$

# CYGNUS LOCAL
AC_PREREQ(2.5)

AC_INIT(itcl/generic/itcl.h)
AC_CANONICAL_HOST

# Note, we don't use the files in the config subdirectory!
AC_CONFIG_AUX_DIR(..)
AC_PROG_MAKE_SET
# END CYGNUS LOCAL

# -----------------------------------------------------------------------
#
#   Set up a new default --prefix.  If a previous installation of
#   [incr Tcl] can be found searching $PATH use that directory.
#
# -----------------------------------------------------------------------

AC_PREFIX_DEFAULT(/usr/local)
AC_PREFIX_PROGRAM(itclsh)

# Source-Navigator does not use the iwidgets packag
subdirs=

if test -d ${srcdir}/../snavigator && test ! -d ${srcdir}/../gdb/gdbtk ; then
    subdirs="itcl itk"
else
    subdirs="itcl itk iwidgets3.0.0"
fi
AC_CONFIG_SUBDIRS($subdirs)

AC_OUTPUT(Makefile,
	chmod +x ${srcdir}/config/install-sh ${srcdir}/config/mkinstalldirs)
